# worker-ng

./: .gitignore  .readthedocs.yaml  404.html  CMakeLists.txt  README.md  TODO.md  build.sh  build_genius.sh  build_wice.sh  development_worker.recipe  environment.yml  index.html  run_test.sh  search.html  setup.sh  setup_genius.sh  setup_wice.sh
.github/workflows/: ci.yml
changes/: index.html
commands/: index.html
conf/: .gitignore  CMakeLists.txt  pbs_config.conf  pbs_jobscript.tmpl  slurm_config.conf  slurm_jobscript.tmpl  worker_env_genius.sh  worker_env_wice.sh
contact/: index.html
docs/: CMakeLists.txt  Doxyfile.in
docs/dev/: option_parsing.md
docs_dev/: CMakeLists.txt  Doxyfile.in
docs_user/: .gitignore  CMakeLists.txt  mkdocs.yml  requirements_build.txt
docs_user/docs/: changes.md  commands.md  contact.md  further_info.md  index.md  mapreduce.md  monitoring.md  multithreading.md  resume.md  steps.md  time_limits.md  todo.md  trouble.md
easyconfig/: worker-ng-1.0-GCCcore-10.3.eb  worker-ng-1.0.-GCCcore-10.3.eb
efficiency/: index.html
examples/: README.md  jobscript.pbs  jobscript.slurm  jobscript_failures.pbs  jobscript_invalid.pbs  large.txt  nodefile  work_load.txt  work_load_env.txt  work_load_failures.txt
examples/dev/: README.md
examples/dev/worker_1234/: submit.sh  workerfile.txt
examples/dev/worker_1234_failures/: jobscript.sh  server_info.txt  workerfile.txt
examples/env/: README.md  jobscript.slurm
examples/failures/: .gitignore  README.md  create_data_file.py  data.csv  failures.slurm  jobscript.pbs  jobscript.slurm  sum.py
examples/python_sum/: README.md  create_data_file.py  data.csv  jobscript.slurm  sum.slurm
examples/simple/: README.md  create_data_file.py  data.csv  data.txt  jobscript.pbs  jobscript.slurm
examples/single_data_column/: README.md  create_data_file.py  data.csv  jobscript.slurm  square.py
examples/tmp_worker_abc/: jobscript.sh  submit.sh  workerfile.txt
examples/wc/: .gitignore  README.md  create_data_files.py  jobscript.slurm  wc.slurm
examples/wc/data/: file_0001.txt  file_0002.txt  file_0003.txt  file_0004.txt  file_0005.txt  file_0006.txt  file_0007.txt  file_0008.txt  file_0009.txt  file_0010.txt  file_0011.txt  file_0012.txt  file_0013.txt  file_0014.txt  file_0015.txt  file_0016.txt  file_0017.txt  file_0018.txt  file_0019.txt  file_0020.txt  file_0021.txt  file_0022.txt  file_0023.txt  file_0024.txt  file_0025.txt  file_0026.txt  file_0027.txt  file_0028.txt  file_0029.txt  file_0030.txt  file_0031.txt  file_0032.txt  file_0033.txt  file_0034.txt  file_0035.txt  file_0036.txt  file_0037.txt  file_0038.txt  file_0039.txt  file_0040.txt  (+60 more)
examples/worker_1234/: jobscript.sh
examples/worker_1234_failures/: submit.sh
further_info/: index.html
mapreduce/: index.html
monitoring/: index.html
multithreading/: index.html
resume/: index.html
scripts/: .gitignore  CMakeLists.txt  launch.sh  pbs_torque.tmpl  requirements.txt  requirements_runtime.txt  worker_functions.sh  wresume.py  wresume.py.in  wsub.py  wsub.py.in  wsummarize.py  wsummary.py
scripts/worker/: data_sources.py  errors.py  log_parsers.py  option_parser.py  pbs_torque_option_parser.py  submit_output_parser.py  templates.py  utils.py  workfile_parser.py
scripts/worker/pbs_torque/: jobscript.tmpl  option_parser.py  submit_output_parser.py
scripts/worker/slurm/: jobscript.tmpl  option_parser.py  submit_output_parser.py
search/: search_index.json
src/: .gitignore  CMakeLists.txt  Makefile  client.cpp  envelope.cpp  envelope.h  envelope_test.cpp  message.cpp  message.h  message_test.cpp  parser_test.cpp  processor_test.cpp  server.cpp  utils.cpp  utils.h  work_parser.cpp~  work_parser.h~  worker_exception.cpp  worker_exception.h  worker_ng_config.h.in
src/work_parser/: CMakeLists.txt  work_parser.cpp  work_parser.h
src/work_processor/: CMakeLists.txt  processor.cpp  processor.h  result.cpp  result.h
steps/: index.html
test/worker/: test_data_sources.py
time_limits/: index.html
tmpl/: run.tmpl  run_query_cmd.tmpl  run_scheduler_cmd.tmpl
todo/: index.html
trouble/: index.html
usage/: index.html
